made some drastic redesign changes

--- a/css/style.css
+++ b/css/style.css
@@ -1,209 +1,221 @@
-﻿/**************************
+﻿/***************************
         HOME
-**************************/
+***************************/
+
 
 body {
-    margin: 0;
+    font-family: 'Abril+Fatface';
+    color: #222;
 }
 
-a {
-    color: inherit;
-    text-decoration: none;
+#name {
+    font-size: xx-large;
+    color: #fff;   
 }
 
-#navwrapper {
-    position: absolute;
-    height: 100%;
-    width: 100%;
-    display: flex-box;
-    -webkit-transform: transitionX(0);
-    transform: transitionX(0);
-    transition: -webkit-transform 0.6s cubic-bezier(0.58, -0.65, 0, 1.67);
+nav.navbar-default {
+    background-color: #15100D;
+    height: 60px;
+    margin-bottom: -4px;
+    border: 0 solid;
 }
 
-.open {
-    -webkit-transform: translateX(-20rem);
-    transform: translateX(-20rem);
-    transition: -webkit-transform 0.6s cubic-bezier(0.58, -0.65, 0, 1.67);
+.navbar-brand {
+    font-family: 'Abril+Fatface';
+    font-weight: bolder;
+    font-size: 1.6em;
 }
 
-header {
-    background-color: transparent;
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-flex-flow: row wrap;
-    -ms-flex-flow: row wrap;
-    flex-flow: row wrap;
-    padding: 1rem 0;
+#myNavbar {
+    font-size: large;
 }
 
-.nav-toggle {
-    float: right;
-    margin-top: 0.5rem;
-    z-index: 1040;
-    color: #fff;
+
+.navbar-brand:hover,
+ul.navbar-nav li:hover {
+    color: #000 !important;
+    background-color: #f7f7f7 !important;
 }
 
-.container {
-    width: 1000px;
+.landing-page {
+    background-image: url('../images/2014-09-09 18.46.39.jpg');
+    background-position: 0px -137px;
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 900px;
+}
+
+
+.landing-title {
+    text-align: center;
+    padding-top: 50px;
+}
+
+    .landing-title h1 {
+        color: #f1f1f1;
+        font-family: 'sofia';
+        font-weight: bolder;
+        font-size: 6em;
+        text-shadow: -10px -6px #000;
+    }
+
+    .landing-title h4 {
+        font-family: 'Abril+Fatface';
+        font-weight: 100;
+        color: #fff;
+        font-size: 2em;
+        text-shadow: -4px -3px #000;
+        padding: 7px;
+    }
+
+/***************************
+        STACK ICONS
+***************************/
+#stackIcons {
+    height: 200px;
+    background-color: #000;
+}
+
+#stackIcons img {
+    display: inline-block;
+    width: 150px;
+    height: 150px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+
+
+
+
+
+
+
+
+
+/***************************
+        ABOUT
+***************************/
+
+
+.about {
+    background: url("https://images.unsplash.com/photo-1437936251057-dfbf79980ce5?fit=crop&fm=jpg&h=650&ixlib=rb-0.3.5&q=80&w=1375")fixed;
+    height: 700px;
+}
+
+.about-content {
+    padding-top: 50px;
+}
+
+.about h2 {
+    color: #efefef;
+    text-shadow: 1px 1px #333;
+}
+
+.about p {
+    color: #ddd;
+    font-size: 1.5em;
+}
+
+.about-img {
+    height: 250px;
+    margin-left: 50px;
+    box-shadow: 1px -1px #FDFFFE;
+}
+
+/***************************
+        PORTFOLIO
+***************************/
+
+.portfolio {
+    background: url("https://images.unsplash.com/photo-1441260038675-7329ab4cc264?fit=crop&fm=jpg&h=650&ixlib=rb-0.3.5&q=80&w=1375")fixed;
+    height: 700px;
     margin: 0 auto;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-    -webkit-flex-direction: row;
-    -ms-flex-direction: row;
-    flex-direction: row;
-    vertical-align: middle;
 }
 
-.jumbotron {
-  background: transparent !important;
-  color: white !important;
-  font-family: 'Roboto', sans-serif;
-  position: relative;
-  top: 250px;
+.portfolio-content {
+    padding-top: 50px;
 }
 
-.jumbotron h1{
-  font-size:80px !important;
+.post > img {
+    width: 50%;
 }
 
-.home {
-    background-image: url('../images/IMG_7884.jpg');
-    background-size: cover !important;
-    height: 1000px;
+.portfolio h2 {
+    color: #f1f1f1;
+    text-shadow: 1px 1px #333;
 }
 
-
-/**************************
-        NAVIGATION
-**************************/
-
-
-.off-nav {
-    height: 100%;
-    position: fixed;
-    background-color: #262626;
-    z-index: 100;
-    width: 20rem;
-    top: 0;
-    right: 0;
-    z-index: 1000;
-    -webkit-transform: translateX(20rem);
-    transform: translateX(20rem);
-    transition: -webkit-transform 0.6s cubic-bezier(0.58, -0.65, 0, 1.67);
-    overflow-y: scroll;
+.portfolio h3 {
+    color: #ddd;
+    text-shadow: 1px 1px #333;
 }
 
-    .off-nav.is-open {
-        -webkit-transform: translateX(0rem);
-        transform: translateX(0rem);
-        transition: -webkit-transform 0.6s cubic-bezier(0.58, -0.65, 0, 1.67);
+.portfolio p {
+    color: #ddd;
+}
+
+/***************************
+        CONTACT
+***************************/
+
+.contact {
+    background: url("https://images.unsplash.com/photo-1429032021766-c6a53949594f?fit=crop&fm=jpg&h=650&ixlib=rb-0.3.5&q=80&w=1375")fixed;
+    height: 700px;
+}
+
+.contact-content {
+    padding-top: 50px;
+}
+
+.contact h2 {
+    color: #f1f1f1;
+    text-shadow: 1px 1px #333;
+}
+
+.contact p {
+    color: #ddd;
+    text-shadow: 1px 1px #333;
+    font-size: 2em;
+}
+
+    .contact p a {
+        color: #5aee45;
     }
 
-    .off-nav a {
-        padding: 1rem;
-        display: block;
-        border-bottom: 1px solid rgba(0, 0, 0, 0.72);
-        color: #999999;
-    }
-
-        .off-nav a:hover {
-            background-color: rgba(0, 0, 0, 0.95);
-            color: #fff;
-            -webkit-transition: all 0.25s ease-in-out;
-            transition: all 0.25s ease-in-out;
-        }
-
-#hamburger {
-    width: 30px;
-    height: 45px;
-    position: relative;
-    margin: 80px auto;
-    -webkit-transform: rotate(0deg);
-    transform: rotate(0deg);
-    -webkit-transition: 0.5s ease-in-out;
-    transition: 0.5s ease-in-out;
-    cursor: pointer;
+.contact .social-buttons > li {
+    display: block;
+    padding: 5px;
 }
 
-    #hamburger span {
-        background-color: #000;
-        display: block;
-        position: absolute;
-        height: 2px;
-        width: 100%;
-        border-radius: 9px;
-        left: 0;
-        -webkit-transform: rotate(0deg);
-        transform: rotate(0deg);
-        -webkit-transition: 0.25s ease-in-out;
-        transition: 0.25s ease-in-out;
-    }
-
-        #hamburger span:nth-child(1) {
-            top: 0px;
-            -webkit-transform-origin: left center;
-            transform-origin: left center;
-        }
-
-        #hamburger span:nth-child(2) {
-            top: 9px;
-            -webkit-transform-origin: left center;
-            transform-origin: left center;
-        }
-
-        #hamburger span:nth-child(3) {
-            top: 18px;
-            -webkit-transform-origin: left center;
-            transform-origin: left center;
-        }
-
-    #hamburger.open span:nth-child(1) {
-        -webkit-transform: rotate(45deg);
-        transform: rotate(45deg);
-        top: -3px;
-        left: 0px;
-    }
-
-    #hamburger.open span:nth-child(2) {
-        top: 24px;
-        position: relative;
-        opacity: 0;
-    }
-
-    #hamburger.open span:nth-child(3) {
-        -webkit-transform: rotate(-45deg);
-        transform: rotate(-45deg);
-        top: 19px;
-        left: 0px;
-    }
-
-
-/**************************
-        FOOTER
-**************************/
-    i {
-  color: white;
-  margin-right: 0.16em;
+/***************************
+       FOOTER
+***************************/
+i {
+    color: white;
+    margin-right: 0.16em;
 }
+
 .foot {
-  width: 100%;
-  background-color: black;
-  color: white;
-  padding-top: 20px;
-  float: left;
+    width: 100%;
+    background-color: black;
+    color: white;
+    padding-top: 20px;
+    float: left;
 }
 
 footer {
-  background-color: black;
-  color: white;
-}
-.icons {
-  display: inline-block;
+    background-color: black;
+    color: white;
 }
 
-.icons a {
-  text-decoration: none !important;
+.icons {
+    display: inline-block;
+    margin-bottom: 1.5em;
+    margin-top: 1em;
 }
+
+    .icons a {
+        text-decoration: none !important;
+    }
+
