--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,12 @@
-﻿/***************************
+﻿
+html, body {
+    padding: 0;
+    margin: 0;
+    height: 100%;
+    width: 100%;
+}
+
+/***************************
         HOME
 ***************************/
 
@@ -32,19 +40,20 @@ nav.navbar-default {
 
 
 .navbar-brand:hover,
-ul.navbar-nav li:hover {
+ul.navbar-nav li:hover a:hover {
     color: #000 !important;
     background-color: #f7f7f7 !important;
 }
 
 .landing-page {
     background-image: url('../images/2014-09-09 18.46.39.jpg');
-    background-position: 0px -137px;
-    background-size: cover;
+    background-position: center;
     background-repeat: no-repeat;
-    height: 900px;
+    background-size: cover;
+    height: 100%;
+    width: 100%;
+    overflow: hidden;
 }
-
 
 .landing-title {
     text-align: center;
@@ -65,124 +74,45 @@ ul.navbar-nav li:hover {
         color: #fff;
         font-size: 2em;
         text-shadow: -4px -3px #000;
-        padding: 7px;
+        padding: 3px;
     }
+
+#downArrow {
+    padding-top: 21%;
+    margin-left: 48%;
+}
+
+@media (max-width: 770px) {
+    .landing-title h1 {
+        margin-top: 16%;
+    }
+}
 
 /***************************
         STACK ICONS
 ***************************/
-#stackIcons {
-    height: 260px;
+.stack-icons {
+    height: 300px;
     background-color: #000;
 }
 
-    #stackIcons img {
-        margin-top: -17em;
-        padding-right: 15px;
-        padding-left: 15px;
-        margin-right: auto;
-        margin-left: auto;
-    }
-
-
 
 /***************************
-        ABOUT
+    
 ***************************/
 
-
-.about {
-    background-image: url('../images/G0434530.JPG');
-    background-repeat: no-repeat;
-    height: 700px;
-    width: auto;
-
-}
-
-.about-content {
-    padding-top: 50px;
-}
-
-.about h2 {
-    color: #efefef;
-    text-shadow: 1px 1px #333;
-}
-
-.about p {
-    color: #ddd;
-    font-size: 1.5em;
-}
-
-.about-img {
-    width: 350px;
-    margin-left: 50px;
-    box-shadow: 1px -1px #FDFFFE;
-}
 
 /***************************
         PORTFOLIO
 ***************************/
 
-.portfolio {
-    background: url("https://images.unsplash.com/photo-1441260038675-7329ab4cc264?fit=crop&fm=jpg&h=650&ixlib=rb-0.3.5&q=80&w=1375")fixed;
-    height: 700px;
-    margin: 0 auto;
-}
 
-.portfolio-content {
-    padding-top: 50px;
-}
-
-.post > img {
-    width: 50%;
-}
-
-.portfolio h2 {
-    color: #f1f1f1;
-    text-shadow: 1px 1px #333;
-}
-
-.portfolio h3 {
-    color: #ddd;
-    text-shadow: 1px 1px #333;
-}
-
-.portfolio p {
-    color: #ddd;
-}
 
 /***************************
-        CONTACT
+     
 ***************************/
 
-.contact {
-    background: url("https://images.unsplash.com/photo-1429032021766-c6a53949594f?fit=crop&fm=jpg&h=650&ixlib=rb-0.3.5&q=80&w=1375")fixed;
-    height: 700px;
-}
 
-.contact-content {
-    padding-top: 50px;
-}
-
-.contact h2 {
-    color: #f1f1f1;
-    text-shadow: 1px 1px #333;
-}
-
-.contact p {
-    color: #ddd;
-    text-shadow: 1px 1px #333;
-    font-size: 2em;
-}
-
-    .contact p a {
-        color: #5aee45;
-    }
-
-.contact .social-buttons > li {
-    display: block;
-    padding: 5px;
-}
 
 /***************************
        FOOTER
@@ -191,6 +121,10 @@ i {
     color: white;
     margin-right: 0.16em;
 }
+
+    i:hover {
+        color: #000 !important;
+    }
 
 .foot {
     width: 100%;
