bootstrap is giving me some phantom white spaces between divs / logo added, still tinkering

--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,14 @@ body {
 #name {
     font-size: xx-large;
     color: #fff;
+    margin-top: 12px;
+}
+
+#logo {
+    height: 75px;
+    width: 75px;
+    float: left;
+    margin-right: 15px;
 }
 
 nav.navbar-default {
@@ -37,7 +45,9 @@ nav.navbar-default {
 #myNavbar {
     font-size: large;
 }
-
+.navbar {
+    margin-bottom: 0;
+}
 
 .navbar-brand:hover,
 ul.navbar-nav li:hover a:hover {
@@ -79,7 +89,7 @@ ul.navbar-nav li:hover a:hover {
 
 #downArrow {
     padding-top: 21%;
-    margin-left: 48%;
+    margin-left: 47.5%;
 }
 
 @media (max-width: 770px) {
@@ -95,6 +105,7 @@ ul.navbar-nav li:hover a:hover {
     height: 300px;
     background-color: #000;
 }
+
 
 
 /***************************
