--- a/css/style.css
+++ b/css/style.css
@@ -26,12 +26,14 @@ body {
     height: 75px;
     width: 75px;
     float: left;
-    margin-right: 15px;
+    margin-right: 30px;
+    margin-left: 25px;
+    margin-top: 2px;
 }
 
 nav.navbar-default {
     background-color: #15100D;
-    height: 60px;
+    height: 80px;
     margin-bottom: -4px;
     border: 0 solid;
 }
@@ -44,7 +46,9 @@ nav.navbar-default {
 
 #myNavbar {
     font-size: large;
+    margin-top: 12px;
 }
+
 .navbar {
     margin-bottom: 0;
 }
@@ -60,7 +64,7 @@ ul.navbar-nav li:hover a:hover {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    height: 100%;
+    height: 92%;
     width: 100%;
     overflow: hidden;
 }
@@ -88,8 +92,12 @@ ul.navbar-nav li:hover a:hover {
     }
 
 #downArrow {
-    padding-top: 21%;
-    margin-left: 47.5%;
+    height: 90px;
+    width: 90px;
+    display:block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 43vh; 
 }
 
 @media (max-width: 770px) {
