--- a/css/style.css
+++ b/css/style.css
@@ -114,6 +114,13 @@ ul.navbar-nav li:hover a:hover {
     background-color: #000;
 }
 
+.stack-icons h3 {
+    color: #fff;
+    text-align:center;
+    margin-top: 30px;
+    margin-bottom: -60px;
+}
+
 
 
 /***************************
