updated background images

--- a/css/style.css
+++ b/css/style.css
@@ -163,7 +163,7 @@ ul.navbar-nav li:hover a:hover {
 ***************************/
 #slide-3 .bcg {
     height: 700px;
-    background-image: url('../images/WinterImage.png');
+    background-image: url('../images/logoBackground.png');
 }
 
 .hsContent h2 {
