--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,12 +1,12 @@
-﻿@-ms-viewport{
-  width: device-width;
+﻿@-ms-viewport {
+    width: device-width;
 }
 
 /***************************
         NAV
 ***************************/
 
-@media (max-width: 770px) {
+@media (max-width: 767px) {
     .navbar-brand, ul.navbar-nav li a {
         background-color: #000;
     }
@@ -23,26 +23,53 @@
         margin-top: 22px;
     }
 
+    #logo {
+        margin-right: 10px;
+    }
 
-}
-
-@media (max-width: 463px) {
-    .name.navbar-brand {
-       
+    .navbar-brand {
+        padding-left: 0px;
     }
 }
+
 
 
 /***************************
         HOME
 ***************************/
 
-@media (max-width: 770px) {
+@media (max-width: 767px) {
+    #slide-1 .bcg {
+        background-image: url('../images/rsz_12014-09-09_184639.jpg');
+    }
+
     .landing-title h1 {
         margin-top: 11vh;
     }
 
     #downArrow {
-        /*display: none;*/
+        display: none;
+    }
+}
+
+
+/***************************
+        STACK ICONS
+***************************/
+
+@media (max-width: 1199px) {
+
+    #octocat {
+        display: none !important;
+    }
+
+    #stackRow {
+        margin-bottom: 25px;
+    }
+}
+
+@media (max-width: 767px) {
+    #jquery {
+        display: none !important;
     }
 }
