--- a/css/style.css
+++ b/css/style.css
@@ -6,10 +6,7 @@
 }
 
 body {
-    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif
-    /*font-family: 'Abril+Fatface';*/
-    color: #222;
-    min-width: 448px;
+    min-width: 375px;
 }
 /***************************
         NAV
@@ -20,12 +17,12 @@ body {
     color: #fff;
     margin-top: 12px;
     float: none;
+    vertical-align: middle;
 }
 
 #logo {
     height: 75px;
     width: 75px;
-    
     margin-right: 30px;
     margin-left: 25px;
     margin-top: 2px;
@@ -46,12 +43,17 @@ nav.navbar-default {
 
 #myNavbar {
     font-size: large;
-
 }
+
+    #myNavbar ul li a {
+        line-height: 50px;
+    }
 
 .navbar-default .navbar-nav > li > a {
     color: #fff;
 }
+
+
 
 #navContact {
     margin-right: 50px;
@@ -92,9 +94,14 @@ ul.navbar-nav li:hover a:hover {
     width: 100%;
 }
 
-#slide-1 .bcg {
-    background-image: url('../images/2014-09-09 18.46.39.jpg');
+#slide-1 {
+    height: 92vh;
+    position: relative;
 }
+
+    #slide-1 .bcg {
+        background-image: url('../images/2014-09-09 18.46.39.jpg');
+    }
 
 
 .landing-title {
@@ -123,9 +130,9 @@ ul.navbar-nav li:hover a:hover {
     height: 90px;
     width: 90px;
     display: block;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 40vh;
+    margin-left: 47.4%;
+    position: absolute;
+    bottom: 9px;
 }
 
 
@@ -134,7 +141,6 @@ ul.navbar-nav li:hover a:hover {
         STACK ICONS
 ***************************/
 .stack-icons {
-    height: 300px;
     background-color: #000;
 }
 
@@ -142,9 +148,22 @@ ul.navbar-nav li:hover a:hover {
         color: #fff;
         text-align: center;
         margin-top: 30px;
-        margin-bottom: -60px;
         padding-bottom: 20px;
     }
+
+#stackRow .portfolio-item {
+    display: inline-block;
+    float: none;
+    vertical-align: middle;
+}
+
+.row-centered {
+    text-align: center;
+}
+
+#octocat {
+    margin-bottom: 10px;
+}
 
 
 
@@ -244,15 +263,6 @@ ul.navbar-nav li:hover a:hover {
     text-shadow: 2px 2px #000;
 }
 
-.row {
-    padding-top: 40px;
-}
-
-.portfolio-item {
-    margin-bottom: 10px;
-    padding-right: 5px;
-    padding-left: 5px;
-}
 
 
 /***************************
