--- a/css/responsive.css
+++ b/css/responsive.css
@@ -38,20 +38,6 @@
         HOME
 ***************************/
 
-@media (max-width: 767px) {
-    #slide-1 .bcg {
-        background-image: url('../images/rsz_12014-09-09_184639.jpg');
-    }
-
-    .landing-title h1 {
-        margin-top: 11vh;
-    }
-
-    #downArrow {
-        display: none;
-    }
-}
-
 
 /***************************
         STACK ICONS
@@ -68,11 +54,7 @@
     }
 }
 
-@media (max-width: 767px) {
-    #jquery {
-        display: none !important;
-    }
-}
+
 
 @media (max-width: 498px) {
     #favtext {
@@ -86,15 +68,6 @@
         ABOUT
 ***************************/
 
-@media (max-width: 767px) {
-    #slide-2 .bcg {
-        background-image: url('../images/rsz_11aboutimage.png');
-    }
-    #aboutText p {
-        font-size: 150% !important;
-    }
-
-}
 
 @media (max-width: 1730px) {
     #aboutText {
@@ -125,5 +98,21 @@
     
     #aboutText {
         background-color: rgba(255, 255, 255, .7);
+    }
+}
+
+/***************************
+        PORTFOLIO
+***************************/
+
+@media (max-width: 1199px) {
+    #pawze p {
+        padding-bottom: 18px;
+    }
+    #ninja p {
+        padding-bottom: 51px;
+    }
+    #memory p {
+        padding-bottom: 51px;
     }
 }
