--- a/css/small.css
+++ b/css/small.css
@@ -18,16 +18,17 @@ body {
 #logo {
     height: 75px;
     width: 75px;
-    margin-right: 30px;
+    margin-right: 23px;
     margin-left: 25px;
     margin-top: 2px;
 }
 
 #name {
-    font-size: xx-large;
+    font-size: x-large;
     color: #fff;
     float: none;
     vertical-align: middle;
+    padding-left: 0px;
 }
 
 nav.navbar-default {
@@ -48,6 +49,7 @@ nav.navbar-default {
 
     #myNavbar ul li a {
         line-height: 50px;
+        background-color: #15100D;
     }
 
 .navbar-default .navbar-nav > li > a {
@@ -70,6 +72,13 @@ ul.navbar-nav li:hover a:hover {
     background-color: #f7f7f7;
 }
 
+.navbar-toggle {
+        margin-top: 22px;
+    }
+
+    .navbar .nav li {
+    z-index: 1001;
+}
 
 /***************************
         HOME
@@ -95,10 +104,9 @@ ul.navbar-nav li:hover a:hover {
 
 
 .landing-title {
-    font-size: 2.2em;
     text-align: center;
-    padding-top: 150px;
-    padding-bottom: 323px;
+    padding-top: 40px;
+    padding-bottom: 126px;
     
 }
 
@@ -106,7 +114,7 @@ ul.navbar-nav li:hover a:hover {
         color: #fff;
         font-family: 'sofia';
         font-weight: bolder;
-        font-size: 6em;
+        font-size: 10em;
         text-shadow: -10px -6px 25px #000;
         padding-bottom: 20px;
     }
@@ -115,7 +123,7 @@ ul.navbar-nav li:hover a:hover {
         font-family: 'Abril+Fatface';
         font-weight: 100;
         color: #fff;
-        font-size: 2em;
+        font-size: 5em;
         text-shadow: -4px -3px 6px #000;
         padding: 3px;
     }
@@ -123,16 +131,12 @@ ul.navbar-nav li:hover a:hover {
 .social-buttons {
     margin-top: 30px;
     margin-left: 15px;
+    font-size: 1.5em;
 }
 
 
 #downArrow {
-    height: 90px;
-    width: 90px;
-    display: block;
-    left: 45%;
-    position: absolute;
-    bottom: 9px;
+    display: none;
 }
 
 
@@ -148,9 +152,9 @@ ul.navbar-nav li:hover a:hover {
     .stack-icons h3 {
         color: #fff;
         text-align: center;
-        margin-top: 30px;
-        padding-bottom: 20px;
-        font-size: 5em;
+        margin-top: 20px;
+        padding-bottom: 6px;
+        font-size: 2.4em;
     }
 
 #stackRow .portfolio-item {
@@ -161,11 +165,11 @@ ul.navbar-nav li:hover a:hover {
 
 .row-centered {
     text-align: center;
-    margin-bottom: 10px;
+    margin-bottom: 13px;
 }
 
 #octocat {
-    margin-bottom: 15px;
+    margin-bottom: 7px;
 }
 
 #jquery {
@@ -195,13 +199,14 @@ ul.navbar-nav li:hover a:hover {
     padding-top: 45px;
     color: #000;
     text-shadow: 2px 2px 2px #bebcbc;
+    font-size: 4em;
 }
 
 #slide-2 .hsContent p {
     font-family: 'Abril+Fatface';
-    margin-top: 50px;
+    margin-top: 25px;
     color: #000;
-    font-size: x-large;
+    font-size: 3em;
     text-align: center;
     text-shadow: -1px 3px 3px #bebcbc, 1px 3px 3px #F5F6FA;
     font-weight: bold;
@@ -213,7 +218,7 @@ ul.navbar-nav li:hover a:hover {
     position: absolute;
     height: 100%;
     margin-left: auto;
-    background-color: rgba(255, 255, 255, .2);
+    background-color: rgba(255, 255, 255, .4);
 }
 
 
