--- a/css/style.css
+++ b/css/style.css
@@ -31,8 +31,8 @@ body {
 }
 
 nav.navbar-default {
-    background-color: #c;
-    height: 80px;
+    background-color: #000;
+    height: 90px;
     margin-bottom: -4px;
     border: 0 solid;
 }
@@ -68,12 +68,10 @@ nav.navbar-default {
 .navbar-brand:hover,
 ul.navbar-nav li:hover a:hover {
     color: #000 !important;
-    background-color: #f7f7f7;
 }
 
 #name:hover {
     color: #000;
-    background-color: #f7f7f7;
 }
 
 
